kubernetes/apps/media/umlautadaptarrex/app/httproute-outpost.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umlautadaptarrex-480p-com-outpost
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - umlautadaptarrex.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
