kubernetes/apps/media/umlautadaptarrex/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umlautadaptarrex-480p-com
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: UmlautAdaptarrEX
    gethomepage.dev/pod-selector: app.kubernetes.io/name=umlautadaptarrex
    gethomepage.dev/icon: mdi-alphabet-german
spec:
  hostnames:
    - umlautadaptarrex.480p.com
  parentRefs:
    - name: envoy-480p-com-public
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: umlautadaptarrex
          port: 5007
